src/test/deca/context/invalid/resultats/test_class_inexistent_field-cont.res
./src/test/deca/context/invalid/test_class_inexistent_field.deca:18:3: The field is not defined in class A
